// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`http://localhost:4000 account query with authentication with ID field matches snapshot 1`] = `
Object {
  "account": Object {
    "__typename": "Account",
    "id": "cjo0wqu90000e0b03zk6ggygn",
  },
}
`;

exports[`http://localhost:4000 account query with authentication with all fields matches snapshot 1`] = `
Object {
  "account": Object {
    "__typename": "Account",
    "email": "test_user1@email.com",
    "id": "cjo0wqu90000e0b03zk6ggygn",
    "name": "Test User 1",
    "profile": Object {
      "__typename": "Profile",
      "id": "cjo0wqua2000f0b03lgzat5xy",
    },
  },
}
`;

exports[`http://localhost:4000 account query with authentication with profile posts matches snapshot 1`] = `
Object {
  "account": Object {
    "__typename": "Account",
    "id": "cjo0wqu90000e0b03zk6ggygn",
    "profile": Object {
      "__typename": "Profile",
      "id": "cjo0wqua2000f0b03lgzat5xy",
      "posts": Array [
        Object {
          "__typename": "Post",
          "id": "cjo0wquag000g0b03c3fdxuhy",
        },
        Object {
          "__typename": "Post",
          "id": "cjo0wquah000h0b03nd7beoto",
        },
        Object {
          "__typename": "Post",
          "id": "cjo0wquah000i0b03ckstn6d1",
        },
      ],
    },
  },
}
`;
